# tests_ex01

./: pyproject.toml  pytest.ini
products/: models.py  views.py
products/migrations/: 0001_initial.py
products/tests/: test_models.py  test_views.py
testing/: settings.py  urls.py
