[tool.poetry]
name = "pytest01"
version = "0.1.0"
description = ""
authors = ["Helena Kopp <helena.kopp@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"
mixer = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
